--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,8 @@
 <div class="row post">
-  <%= post.body %>
+  <span class="author">
+    <%= post.user.name %>
+  </span>
+  <p>
+    <%= post.body %>
+  </p>
 </div>
