--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_for post, html: { class: 'form post-form'} do |f| %>
 <div class="form-group row">
-  <div class="col-lg-11">
+  <div class="col-xs-10">
     <%= f.text_area :body, class: 'form-control' %>
   </div>
-  <div class="col-lg-1">
+  <div class="col-xs-1">
     <%= f.submit '投稿', class: 'btn btn-primary' %>
   </div>
 </div>
