--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,9 +1,9 @@
-<div class="row">
-  <div class="col-xs-8">
+<div class="row friend-row">
+  <div class="col-xs-2 col-xs-offset-1">
     <%= user.name %>
   </div>
   <% if user_signed_in? && current_user.id != user.id %>
-  <div class="col-xs-4">
+  <div class="col-xs-2">
     <% if current_user.friend?(user) %>
       <%= link_to '友達から外す' ,friend_user_path(user), method: :delete, class: 'btn btn-danger' %>
     <% else %>
